[package]
name = "shadertoys-wgpu"
version = "0.0.0"
authors = []
edition = "2018"

[features]
default = ["use-compiled-tools"]
use-installed-tools = ["spirv-builder/use-installed-tools"]
use-compiled-tools = ["spirv-builder/use-compiled-tools"]

[dependencies]
shared = { path = "shared" }
futures = { version = "0.3", default-features = false, features = ["std", "executor"] }
wgpu = "0.6.0"
winit = { version = "0.23", features = ["web-sys"] }
wgpu-subscriber = "0.1.0"

[build-dependencies]
spirv-builder = { version = "0.4.0-alpha.0", default-features = false }

[workspace]
members = ["shaders"]

[patch.crates-io]
spirv-builder = { git = "https://github.com/EmbarkStudios/rust-gpu", rev = "79200bb777d458ff1265563048aceeee2a82a464" }
spirv-std = { git = "https://github.com/EmbarkStudios/rust-gpu", rev = "79200bb777d458ff1265563048aceeee2a82a464" }
glam = { git = "https://github.com/bitshifter/glam-rs.git", rev ="b3e94fb" }

# Compile build-dependencies in release mode with
# the same settings as regular dependencies.
[profile.release.build-override]
opt-level = 3
codegen-units = 16

# HACK(eddyb) also compile debug mode's build-dependencies with optimizations,
# because otherwise `rustc_codegen_spirv` (esspecially its linker) is too slow.
# Also `spirv-opt` *alone* takes (just) over an hour to run, though this only
# brings it down only to 10 minutes, so I've disabled it below, for now.
[profile.dev.build-override]
opt-level = 3

# HACK(eddyb) don't optimize the shader crate, to avoid `spirv-opt` taking
# a long time (10 minutes if itself was optimized, over an hour otherwise).
[profile.release.package."shadertoys-shaders"]
opt-level = 0
